Embed evercast to my app

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <main class="container">
+  <iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials"></iframe>
   <h1>Your account</h1>
   <h2>Box user name: </h2>
   {{ name }}
