--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
 <main class="container">
-  <h1>Log in to Box Node SDK with OAuth sample app</h1>
+  <h1>Log in to Box with</h1>
   <a class="btn btn-primary" style="margin-top: 20px" href={{login_url}}>Login</a>
 </main>
