--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <iframe src="https://app.evercast.us/?noBrowserCheck=true" title="Evercast in Box"></iframe>
 		{{{body}}}
   </body>
 </html>
